--- a/ManagedCode.OpenAI.Client.Editor/ManagedCode.OpenAI.Client.Editor.csproj
+++ b/ManagedCode.OpenAI.Client.Editor/ManagedCode.OpenAI.Client.Editor.csproj
@@ -4,7 +4,6 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>OpenAI.Api.Client.Editor</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,10 +11,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OpenAI.Api.Client.Models\OpenAI.Api.Client.Models.csproj" />
-      <ProjectReference Include="..\OpenAI.Api.Client.Usages\OpenAI.Api.Client.Usages.csproj" />
+      <ProjectReference Include="..\ManagedCode.Methods\ManagedCode.Methods.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Models\ManagedCode.OpenAI.Client.Models.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Usages\ManagedCode.OpenAI.Client.Usages.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client\ManagedCode.OpenAI.Client.csproj" />
-      <ProjectReference Include="..\OpenAI.Api.Exceptions\OpenAI.Api.Exceptions.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Exceptions\ManagedCode.OpenAI.Client.Exceptions.csproj" />
     </ItemGroup>
 
 </Project>
