--- a/ManagedCode.OpenAI.Client.Completions/ManagedCode.OpenAI.Client.Completions.csproj
+++ b/ManagedCode.OpenAI.Client.Completions/ManagedCode.OpenAI.Client.Completions.csproj
@@ -13,8 +13,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OpenAI.Api.Client.Models\OpenAI.Api.Client.Models.csproj" />
-      <ProjectReference Include="..\OpenAI.Api.Client.Usages\OpenAI.Api.Client.Usages.csproj" />
+      <ProjectReference Include="..\ManagedCode.Methods\ManagedCode.Methods.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Models\ManagedCode.OpenAI.Client.Models.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Usages\ManagedCode.OpenAI.Client.Usages.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client\ManagedCode.OpenAI.Client.csproj" />
     </ItemGroup>
 
