--- a/ManagedCode.OpenAI.Client.Models/ManagedCode.OpenAI.Client.Models.csproj
+++ b/ManagedCode.OpenAI.Client.Models/ManagedCode.OpenAI.Client.Models.csproj
@@ -4,12 +4,11 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>OpenAI.Api.Client.Models</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\ManagedCode.OpenAI.Client\ManagedCode.OpenAI.Client.csproj" />
-      <ProjectReference Include="..\OpenAI.Api.Exceptions\OpenAI.Api.Exceptions.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Exceptions\ManagedCode.OpenAI.Client.Exceptions.csproj" />
     </ItemGroup>
 
 </Project>
