--- a/ManagedCode.OpenAI.Client.ImageGenerator/ManagedCode.OpenAI.Client.ImageGenerator.csproj
+++ b/ManagedCode.OpenAI.Client.ImageGenerator/ManagedCode.OpenAI.Client.ImageGenerator.csproj
@@ -11,8 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ManagedCode.Methods\ManagedCode.Methods.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client\ManagedCode.OpenAI.Client.csproj" />
-      <ProjectReference Include="..\OpenAI.Api.Exceptions\OpenAI.Api.Exceptions.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Exceptions\ManagedCode.OpenAI.Client.Exceptions.csproj" />
     </ItemGroup>
 
 </Project>
