--- a/ManagedCode.OpenAI.Client.Usages/ManagedCode.OpenAI.Client.Usages.csproj
+++ b/ManagedCode.OpenAI.Client.Usages/ManagedCode.OpenAI.Client.Usages.csproj
@@ -4,13 +4,16 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>OpenAI.Api.Client.Usages</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <Reference Include="Newtonsoft.Json">
         <HintPath>..\..\..\.nuget\packages\newtonsoft.json\13.0.3\lib\net6.0\Newtonsoft.Json.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
