Added FileInfo for work with file in OpenAI
But, the problem is that files are created only when purpose =
"fine-tune". When downloading files, the message "To help mitigate
abuse, downloading of fine-tune training files is disabled for free
accounts"

--- a/ManagedCode.OpenAI.Client.Files/ManagedCode.OpenAI.Client.Files.csproj
+++ b/ManagedCode.OpenAI.Client.Files/ManagedCode.OpenAI.Client.Files.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Exceptions\ManagedCode.OpenAI.Client.Exceptions.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client\ManagedCode.OpenAI.Client.csproj" />
+    </ItemGroup>
+
 </Project>
