--- a/ManagedCode.OpenAI.Client.Example/ManagedCode.OpenAI.Client.Example.csproj
+++ b/ManagedCode.OpenAI.Client.Example/ManagedCode.OpenAI.Client.Example.csproj
@@ -8,12 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OpenAI.Api.Client.Chats\OpenAI.Api.Client.Chats.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Files\ManagedCode.OpenAI.Client.Files.csproj" />
+      <ProjectReference Include="..\ManagedCode.OpenAI.Client.Chats\ManagedCode.OpenAI.Client.Chats.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client.Completions\ManagedCode.OpenAI.Client.Completions.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client.Editor\ManagedCode.OpenAI.Client.Editor.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client.ImageGenerator\ManagedCode.OpenAI.Client.ImageGenerator.csproj" />
       <ProjectReference Include="..\ManagedCode.OpenAI.Client.Models\ManagedCode.OpenAI.Client.Models.csproj" />
-      <ProjectReference Include="..\ManagedCode.OpenAI.Client\ManagedCode.OpenAI.Client.csproj" />
     </ItemGroup>
 
 </Project>
