--- a/.gitignore
+++ b/.gitignore
@@ -864,3 +864,8 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,visualstudio,visualstudiocode,intellij,intellij+all,rider,angular,dotnetcore,aspnetcore,xamarinstudio
+
+
+
+# Ignore fields
+ManagedCode.OpenAI.Client.Experiments/
