--- a/ManagedCode.OpenAI/ManagedCode.OpenAI.csproj
+++ b/ManagedCode.OpenAI/ManagedCode.OpenAI.csproj
@@ -16,13 +16,15 @@
         <PackageTags>managedcode, OpenAI, ChatGPT,</PackageTags>
     </PropertyGroup>
     <ItemGroup>
+      <Compile Remove="Audio\**" />
+      <Compile Remove="FileTunes\**" />
       <Compile Remove="Methods\**" />
+      <EmbeddedResource Remove="Audio\**" />
+      <EmbeddedResource Remove="FileTunes\**" />
       <EmbeddedResource Remove="Methods\**" />
+      <None Remove="Audio\**" />
+      <None Remove="FileTunes\**" />
       <None Remove="Methods\**" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Audio" />
-      <Folder Include="FileTunes" />
     </ItemGroup>
 
 </Project>
