Added GptClient static builder
Added image loader extension 'SetImageMask' for IEditImageBuilder
Renaming

--- a/ManagedCode.OpenAI/ManagedCode.OpenAI.csproj
+++ b/ManagedCode.OpenAI/ManagedCode.OpenAI.csproj
@@ -26,5 +26,8 @@
       <None Remove="FileTunes\**" />
       <None Remove="Methods\**" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    </ItemGroup>
 
 </Project>
