--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,12 +29,8 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test and Collect Code Coverage
-        run: dotnet test -p:CollectCoverage=true -p:CoverletOutput=coverage/
+        run: dotnet test -p:CollectCoverage=true  --collect:"XPlat Code Coverage" -p:CoverletOutput=./coverage
  
-
-      - name: Test
-        run: dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
-
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
