--- a/ManagedCode.OpenAI.Tests/ManagedCode.OpenAI.Tests.csproj
+++ b/ManagedCode.OpenAI.Tests/ManagedCode.OpenAI.Tests.csproj
@@ -8,16 +8,27 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="testsettings.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="testsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="coverlet.msbuild" Version="3.2.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="FluentAssertions" Version="6.8.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0"/>
-        <PackageReference Include="Moq" Version="4.18.3"/>
-        <PackageReference Include="xunit" Version="2.4.2"/>
+        <PackageReference Include="FluentAssertions" Version="6.8.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+        <PackageReference Include="Moq" Version="4.18.3" />
+        <PackageReference Include="xunit" Version="2.4.2" />
+        <PackageReference Include="Xunit.DependencyInjection" Version="8.7.1" />
         <PackageReference Include="xunit.runner.console" Version="2.4.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -33,7 +44,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ManagedCode.OpenAI\ManagedCode.OpenAI.csproj"/>
+        <ProjectReference Include="..\ManagedCode.OpenAI\ManagedCode.OpenAI.csproj" />
     </ItemGroup>
 
     <ItemGroup>
