--- a/ManagedCode.OpenAI.Tests/ManagedCode.OpenAI.Tests.csproj
+++ b/ManagedCode.OpenAI.Tests/ManagedCode.OpenAI.Tests.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.5" />
         <PackageReference Include="coverlet.msbuild" Version="3.2.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
