--- a/ManagedCode.OpenAI.Azure/ManagedCode.OpenAI.Azure.csproj
+++ b/ManagedCode.OpenAI.Azure/ManagedCode.OpenAI.Azure.csproj
@@ -23,5 +23,8 @@
     <ItemGroup>
       <ProjectReference Include="..\ManagedCode.OpenAI\ManagedCode.OpenAI.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Client\Extensions\" />
+    </ItemGroup>
 
 </Project>
