--- a/ManagedCode.OpenAI/ManagedCode.OpenAI.csproj
+++ b/ManagedCode.OpenAI/ManagedCode.OpenAI.csproj
@@ -16,10 +16,11 @@
         <PackageTags>managedcode, OpenAI, ChatGPT, API</PackageTags>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    </ItemGroup>
+    <ItemGroup>
         <InternalsVisibleTo Include="ManagedCode.OpenAI.Azure" />
         <InternalsVisibleTo Include="ManagedCode.OpenAI.Tests" />
-        <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.5" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
